[package]
name = "katex-rquickjs"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.rquickjs]
version = "0.6.2"
default-features = false
features = [ "futures", "rust-alloc", "loader", "dyn-load" ]

[features]
default = ["macro"]
macro = ["rquickjs/macro"]

[build-dependencies]
reqwest = { version = "0.12", features = [ "blocking", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
zip-extract = "0.1"