[package]
name = "katex-rquickjs"
version = "0.1.0"
edition = "2021"

[dependencies]
rquickjs = { version = "0.6.2", features = [ "loader", "macro", "properties" ] }
include_dir = "0.7.4"

[features]
default = ["macro"]
macro = ["rquickjs/macro"]

[build-dependencies]
reqwest = { version = "0.12", features = [ "blocking", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
zip-extract = "0.1"
